--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,3 +6,17 @@ services:
       - 5432:5432
     environment:
       - "POSTGRES_PASSWORD=password"
+  elasticsearch:
+    image: elasticsearch
+    ports:
+      - "9200:9200"
+    environment:
+      - "discovery.type=single-node"
+      - "xpack.security.enabled=false"
+  kibana:
+    image: kibana
+    ports:
+      - "5601:5601"
+    restart: on-failure
+    depends_on:
+      - elasticsearch
