--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,14 +7,14 @@ services:
     environment:
       - "POSTGRES_PASSWORD=password"
   elasticsearch:
-    image: elasticsearch
+    image: docker.elastic.co/elasticsearch/elasticsearch:7.13.4
     ports:
       - "9200:9200"
     environment:
       - "discovery.type=single-node"
       - "xpack.security.enabled=false"
   kibana:
-    image: kibana
+    image: docker.elastic.co/kibana/kibana:7.13.4
     ports:
       - "5601:5601"
     restart: on-failure
