--- a/src/main/resources/application-docker.properties
+++ b/src/main/resources/application-docker.properties
@@ -1,1 +1,2 @@
-spring.datasource.url=jdbc:postgresql://postgresql:5432/postgres
+spring.datasource.url=jdbc:postgresql://postgres:5432/postgres
+elastic.search.server=elasticsearch
