--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.datasource.password=password
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.liquibase.change-log=liquibase-init.xml
 management.endpoints.web.exposure.include=*
+elastic.search.server=localhost
+elastic.search.server.port=9200
