--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,7 +22,7 @@ services:
       - elasticsearch
   auction:
     build:
-      context: .
+      context: backend/
       dockerfile: Dockerfile
     environment:
       - "SPRING_PROFILES_ACTIVE=docker"
