--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -6,3 +6,4 @@ spring.liquibase.change-log=liquibase-init.xml
 management.endpoints.web.exposure.include=*
 elastic.search.server=localhost
 elastic.search.server.port=9200
+logging.level.com.example.auction=TRACE
