Add docker frontend

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,3 +30,9 @@ services:
       - "8080:8080"
     depends_on:
       - postgres
+  frontend:
+    build:
+      context: frontend/auction
+      dockerfile: Dockerfile
+    ports:
+      - "4200:80"
