--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -7,3 +7,4 @@ management.endpoints.web.exposure.include=*
 elastic.search.server=localhost
 elastic.search.server.port=9200
 logging.level.com.example.auction=TRACE
+logging.level.org.springframework.security=DEBUG
